--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,7 @@ pyperclip = "^1.8.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+addopts = "-p no:warnings"
